test_programs/compile_failure/comptime_stack_overflow/src/main.nr
fn main() {
    comptime {
        foo();
    }
}

unconstrained fn foo() {
    foo();
}